# asst-qdrant-manager

./: Dockerfile  Makefile  pyproject.toml  qdrant-manager-configmap.yaml  qdrant-manager-deploy.yaml
conf/: qdrant-manager-conf.xml
k8s/: qdrant-manager-configmap.yaml  qdrant-manager-deploy.yaml
src/: QdrantManagerServer.py
src/api/: Router.py
src/api/routes/: Collection.py  Snapshots.py
src/common/: ConfigManager.py  Constant.py  LoggerManager.py
src/core/: Orchestrator.py
src/core/embedding/: EmbeddingProcessor.py  OpenAIEmbeddingProcessor.py
src/core/parser/: FileParser.py
src/core/services/: BaseService.py  CollectionService.py  SnapshotService.py
src/utils/: NameValidators.py  XMLUtils.py
src/utils/logger/: MPLogger.py
