[tool.poetry]
name = "athena-qdrant-manager"
version = "0.1.0"
description = ""
authors = ["wonjun.kim <wonjun.kim@seculayer.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
qdrant-client = "^1.15.1"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
httpx = "^0.28.1"
opendataloader-pdf = ">=2.2.1"
langchain-text-splitters = "^1.0.0"
openai = "^2.31.0"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "aiofiles"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
